--- a/test.html
+++ b/test.html
@@ -6,8 +6,8 @@
 	</title>
 </head>
 <body>
-	<h1> Hey, <b>hello</b>I'm a big <b>fat</b>heading</h1>
-	<p>Hey. I'm a <b>paragraph</b> element. Cool Huh?</p>
+	<h1> Hey, I'm a big fat heading</h1>
+	<p>Hey. I'm a <b>paragraph</b> element. <b>Cool</b> Huh?</p>
 	<a href="https://google.com" target="_blank" title="Let's go to google!">Click me! I'm an element.</a>
 </body>
 </html>
