--- a/test.html
+++ b/test.html
@@ -9,5 +9,6 @@
 	<h1> Hey, I'm a big fat heading</h1>
 	<p>Hey. I'm a <b>paragraph</b> element. <b>Cool</b> Huh?</p>
 	<a href="https://google.com" target="_blank" title="Let's go to google!">Click me! I'm an element.</a>
+	<img src="img/cat.jpg">
 </body>
 </html>
