--- a/style-test.html
+++ b/style-test.html
@@ -2,13 +2,7 @@
 <html>
 <head>
 	<title> Style test </title>
-		<style type="text/css">
-			h1{
-				font-size: 30px;
-				color:rgb(185, 18, 12);
-				
-			}
-		</style>
+	<link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 <body>
 
